<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sigla"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextSigla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sigla_do_ativo"
        android:inputType="text"
        android:textSize="30sp"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_ativo"
        android:inputType="text"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mercado"
        android:textSize="30sp"/>

    <EditText android:id="@+id/editTextMercado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mercado_do_ativo"
        android:inputType="text"
        android:textSize="30sp"/>

</LinearLayout>